# dry

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  Rakefile  build.gradle.kts  gradle.properties  quick.sh  settings.gradle.kts
CMake/Modules/: AdjustPkgConfigForMSVC.cmake  CheckCompilerToolchain.cmake  CheckDryLibrary.cpp  CheckHost.cmake  DryCommon.cmake  FindDirectFB.cmake  FindDirectRenderingManager.cmake  FindDirectX.cmake  FindDry.cmake  FindDry.cmake.autosave  FindEsound.cmake  FindFusionSound.cmake  FindGenericBufferManagement.cmake  FindJack.cmake  FindNetworkAudioSystem.cmake  FindODBC.cmake  FindOSS.cmake  FindPulseAudio.cmake  FindReadline.cmake  FindRoarAudio.cmake  FindSecretRabbitCode.cmake  FindVideoCore.cmake  FindWayland.cmake  FindaRts.cmake  GenerateExportHeader.cmake  GetDryRevision.cmake  MacOSXBundleInfo.plist.template  PostProcessForWebModule.cmake  exportheader.cmake.in  exportheader.cmake.in.autosave
CMake/Toolchains/: Arm.cmake  Emscripten.cmake  MinGW.cmake  RaspberryPi.cmake
Docs/: CMakeLists.txt  Doxyfile.in  Dry.dox  GettingStarted.dox  LuaScriptAPI.dox  README.md  Reference.dox  ScriptAPI.dox  drydox.css
Source/: CMakeLists.txt
Source/Clang-Tools/: CMakeLists.txt
Source/Clang-Tools/Annotator/: Annotator.cpp  CMakeLists.txt
Source/Clang-Tools/AutoBinder/: AutoBinder.cpp  CMakeLists.txt
Source/Dry/: CMakeLists.txt  DebugNew.h  Dry.pc.in  DryAll.h.in  DryConfig.h  LibraryInfo.cpp  LibraryInfo.h  Precompiled.h
Source/Dry/2D/: 2D.cpp  2D.h  AnimatedSprite2D.cpp  AnimatedSprite2D.h  AnimationSet2D.cpp  AnimationSet2D.h  CollisionBox2D.cpp  CollisionBox2D.h  CollisionChain2D.cpp  CollisionChain2D.h  CollisionCircle2D.cpp  CollisionCircle2D.h  CollisionEdge2D.cpp  CollisionEdge2D.h  CollisionPolygon2D.cpp  CollisionPolygon2D.h  CollisionShape2D.cpp  CollisionShape2D.h  Constraint2D.cpp  Constraint2D.h  ConstraintDistance2D.cpp  ConstraintDistance2D.h  ConstraintFriction2D.cpp  ConstraintFriction2D.h  ConstraintGear2D.cpp  ConstraintGear2D.h  ConstraintMotor2D.cpp  ConstraintMotor2D.h  ConstraintMouse2D.cpp  ConstraintMouse2D.h  ConstraintPrismatic2D.cpp  ConstraintPrismatic2D.h  ConstraintPulley2D.cpp  ConstraintPulley2D.h  ConstraintRevolute2D.cpp  ConstraintRevolute2D.h  ConstraintRope2D.cpp  ConstraintRope2D.h  ConstraintWeld2D.cpp  ConstraintWeld2D.h  (+37 more)
Source/Dry/AngelScript/: 2DAPI.cpp  APITemplates.h  Addons.cpp  Addons.h  AudioAPI.cpp  CoreAPI.cpp  DatabaseAPI.cpp  EngineAPI.cpp  GraphicsAPI.cpp  IKAPI.cpp  IOAPI.cpp  InputAPI.cpp  MathAPI.cpp  NavigationAPI.cpp  NetworkAPI.cpp  PhysicsAPI.cpp  ResourceAPI.cpp  SceneAPI.cpp  Script.cpp  Script.h  ScriptAPI.cpp  ScriptAPI.h  ScriptAPIDump.cpp  ScriptEventListener.h  ScriptFile.cpp  ScriptFile.h  ScriptInstance.cpp  ScriptInstance.h  UIAPI.cpp
Source/Dry/Audio/: Audio.cpp  Audio.h  AudioDefs.h  AudioEvents.h  BufferedSoundStream.cpp  BufferedSoundStream.h  OggVorbisSoundStream.cpp  OggVorbisSoundStream.h  Sound.cpp  Sound.h  SoundListener.cpp  SoundListener.h  SoundSource.cpp  SoundSource.h  SoundSource3D.cpp  SoundSource3D.h  SoundStream.cpp  SoundStream.h
Source/Dry/Base/: Algorithm.h  Iter.h
Source/Dry/Container/: Allocator.cpp  Allocator.h  ArrayPtr.h  FlagSet.h  ForEach.h  Hash.h  HashBase.cpp  HashBase.h  HashMap.h  HashSet.h  LinkedList.h  List.h  ListBase.h  Pair.h  Ptr.h  RefCounted.cpp  RefCounted.h  Sort.h  Str.cpp  Str.h  Swap.cpp  Swap.h  Vector.h  VectorBase.cpp  VectorBase.h
Source/Dry/Core/: Attribute.h  Condition.cpp  Condition.h  Context.cpp  Context.h  CoreEvents.h  EventProfiler.cpp  EventProfiler.h  Main.h  MiniDump.cpp  MiniDump.h  Mutex.cpp  Mutex.h  Object.cpp  Object.h  ProcessUtils.cpp  ProcessUtils.h  Profiler.cpp  Profiler.h  Spline.cpp  Spline.h  StringHashRegister.cpp  StringHashRegister.h  StringUtils.cpp  StringUtils.h  Thread.cpp  Thread.h  Timer.cpp  Timer.h  Variant.cpp  Variant.h  WorkQueue.cpp  WorkQueue.h
Source/Dry/Database/: Database.cpp  Database.h  DatabaseEvents.h  DbConnection.h  DbResult.h
Source/Dry/Engine/: Application.cpp  Application.h  Console.cpp  Console.h  DebugHud.cpp  DebugHud.h  Engine.cpp  Engine.h  EngineDefs.h  EngineEvents.h
Source/Dry/Graphics/: AnimatedModel.cpp  AnimatedModel.h  Animation.cpp  Animation.h  AnimationController.cpp  AnimationController.h  AnimationState.cpp  AnimationState.h  Batch.cpp  Batch.h  BillboardSet.cpp  BillboardSet.h  Camera.cpp  Camera.h  ConstantBuffer.cpp  ConstantBuffer.h  CustomGeometry.cpp  CustomGeometry.h  DebugRenderer.cpp  DebugRenderer.h  DecalSet.cpp  DecalSet.h  Drawable.cpp  Drawable.h  DrawableEvents.h  GPUObject.cpp  GPUObject.h  Geometry.cpp  Geometry.h  Graphics.cpp  Graphics.h  GraphicsDefs.cpp  GraphicsDefs.h  GraphicsEvents.h  GraphicsImpl.h  IndexBuffer.cpp  IndexBuffer.h  Light.cpp  Light.h  Material.cpp  (+65 more)
Source/Dry/IK/: IK.cpp  IK.h  IKConstraint.cpp  IKConstraint.h  IKConverters.cpp  IKConverters.h  IKEffector.cpp  (+4 more)
Source/Extras/: CMakeLists.txt  Readme.txt
Source/Samples/: CMakeLists.txt  Sample.h  Sample.inl
Source/Tools/: CMakeLists.txt
Source/Tools/PackageTool/: CMakeLists.txt  PackageTool.cpp
SourceAssets/: Box.blend  Cone.blend  Cylinder.blend  Dome.blend  Plane.blend  Pyramid.blend  Sphere.blend  TeaPot.blend  Torus.blend
android/dry-lib/: build.gradle.kts
android/launcher-app/: CMakeLists.txt  build.gradle.kts
android/launcher-app/src/main/: AndroidManifest.xml
android/launcher-app/src/main/java/games/luckey/dry/launcher/: LauncherActivity.kt  MainActivity.kt
build-mac/Dry.xcodeproj/: project.pbxproj
buildSrc/: build.gradle.kts
script/: .build-options  .env-file  cmake_arm.sh  cmake_clean.bat  cmake_clean.sh  cmake_codeblocks.bat  cmake_codeblocks.sh  cmake_codelite.bat  cmake_codelite.sh  cmake_eclipse.sh  cmake_emscripten.bat  cmake_emscripten.sh  cmake_generic.bat  cmake_generic.sh  cmake_ios.sh  cmake_mingw.bat  cmake_mingw.sh  cmake_ninja.bat  cmake_ninja.sh  cmake_rpi.sh  cmake_tvos.sh  cmake_vs2015.bat  cmake_vs2017.bat  cmake_vs2019.bat  cmake_xcode.sh  dockerized.sh  installreq.sh
(+782 files in other folders)
